<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tareas</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="nueva_tarea">Nueva Tarea</string>
    <string name="eliminar_tareas">Limpiar Tareas</string>
    <string name="confirmDel">¿Seguro que desea borrar todas las tareas?</string>
    <string name="confirmDelReg">¿Seguro que desea borrar la tarea?</string>
    <string name="confirmUpdateReg">¿Seguro que desea modficar la tarea?</string>
    <string name="btn_Yes">Si</string>
    <string name="buscar_tarea">Buscar Tarea</string>
    <string name="limpiarDB">Eliminacion de Registros</string>
    <string name="title_activity_main_activity2">Main Activity 2</string>
    <string name="title_AddTask">Agregar Tarea</string>
    <string name="add_Title">Titulo de Tarea</string>
    <string name="add_Desc">Descripcion</string>
    <string name="add_Time">Definir Hora</string>
    <string name="add_BtnOk">Listo</string>
    <string name="nombre_de_la_tarea">Nombre de la Tarea</string>
    <string name="nombre_de_la_tarea_hint">Tarea</string>
    <string name="descripcion_de_la_tarea">Descripcion de la Tarea</string>
    <string name="descripcion_de_la_tarea_hint">Descripcion</string>
    <string name="nombre_de_la_Materia">Materia</string>
    <string name="nombre_de_la_Materia_hint">Materia</string>
    <string name="btn_Cancelar">Cancelar</string>
    <string name="btn_No">No</string>
    <string name="btn_Guardar">Guardar</string>
    <string name="txtFecha">Fecha</string>
    <string name="txtHora">Hora</string>
    <string name="fecha_de_la_tarea">Fecha de la Tarea</string>
    <string name="hora_de_alarma">Hora de Alarma</string>
    <string name="tarea_guardada">Tarea Guardada</string>
    <string name="sin_tareas">Aun no hay Tareas</string>
    <string name="btn_Buscar">Buscar</string>
    <string name="btn_Volver">Volver</string>
    <string name="title_activity_detail">detailActivity</string>
    <string name="title_activity_detail_search_activiry">DetailSearchActiviry</string>
    <string name="error">Por favor llena los campos anteriores</string>
    <string name="ok">OK</string>
    <string name="title_activity_alarm_receiver">AlarmReceiver</string>
    <string name="inicio_alarma">Se inicia la Alarma</string>
    <string name="detener">Detener Alarma</string>
</resources>
