<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item
        android:title="@string/nueva_tarea"
        android:id="@+id/addTask"
        android:orderInCategory="1"
        android:icon="@drawable/ic_action_new"
        app:showAsAction="always|withText"
        android:onClick="AgregarTarea"/>
    <item
        android:title="@string/buscar_tarea"
        android:id="@+id/searchTask"
        android:orderInCategory="2"
        android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
        app:showAsAction="ifRoom|withText"
        android:onClick="BuscarTarea"/>
    <item
        android:title="@string/eliminar_tareas"
        android:id="@+id/deleteAllTask"
        android:orderInCategory="3"
        android:icon="@drawable/abc_ic_clear_mtrl_alpha"
        app:showAsAction="ifRoom|withText"
        android:onClick="DeleteAllTask"/>
</menu>

