<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/popUpSearch">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombre_de_la_tarea"/>
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="36dp"
                android:layout_marginTop="5dp"
                android:hint="@string/nombre_de_la_tarea_hint"
                android:background="@drawable/edit_text_round"
                android:paddingLeft="5dp"
                android:gravity="center_vertical"
                android:maxLength="40"
                android:id="@+id/nameTarea"/>






            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:weightSum="1">
                <Button
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight=".45"
                    android:text="@string/btn_Cancelar"
                    android:id="@+id/btnCancelar"/>
                <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight=".1"/>
                <Button
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight=".45"
                    android:text="@string/btn_Buscar"
                    android:id="@+id/btnSearch"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>