<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">


            <EditText
                android:layout_width="fill_parent"
                android:layout_height="36dp"
                android:layout_marginTop="5dp"
                android:hint="@string/nombre_de_la_tarea_hint"
                android:background="@drawable/edit_text_round"
                android:paddingLeft="5dp"
                android:gravity="center_vertical"
                android:maxLength="40"
                android:id="@+id/searchTarea"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="36dp"
                android:layout_marginTop="10dp"
                android:hint="@string/nombre_de_la_Materia_hint"
                android:background="@drawable/edit_text_round"
                android:paddingLeft="5dp"
                android:gravity="center_vertical"
                android:maxLength="40"
                android:id="@+id/searchMateria"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="fill_parent"
                android:layout_height="36dp"
                android:text="@string/txtFecha"
                android:background="@drawable/edit_text_round"
                android:paddingLeft="5dp"
                android:gravity="center_vertical"
                android:id="@+id/txtDatePicker"
                android:clickable="true"/>


            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="fill_parent"
                android:layout_height="36dp"
                android:text="@string/txtHora"
                android:background="@drawable/edit_text_round"
                android:paddingLeft="5dp"
                android:gravity="center_vertical"
                android:id="@+id/txtTimePicker"
                android:clickable="true"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/descripcion_de_la_tarea"/>
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:layout_marginTop="5dp"
                android:hint="@string/descripcion_de_la_tarea_hint"
                android:inputType="textCapSentences|textMultiLine"
                android:maxLength="500"
                android:gravity="clip_horizontal"
                android:background="@drawable/edit_text_round"
                android:maxLines="4"
                android:id="@+id/searchDescripcion"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/delete_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:text="Borrar" />

            <Button
                android:id="@+id/update_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:text="Modificar" />
        </LinearLayout>
        </LinearLayout>

    </ScrollView>



</LinearLayout>